contrast ratio fix

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ p {
     text-transform: uppercase;
     padding: 0 10px;
     background: var(--primary-color);
-    color: white;
+    color: black;
 }
 
 .nav-links {
